--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ STRIPE_SECRET_KEY=your_test_key_here
 
 ADMIN_ID=your_admin_id_here
 ADMIN_PASSWORD=your_admin_password_here
+
+SECRET_TOKEN_DEV="my_secret_token"
+SECRET_KEY_BASE_DEV="abcdef0123456789"
+
+SECRET_TOKEN="my_secret_token"
+SECRET_KEY_BASE="abcdef0123456789"
