--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,8 @@ ADMIN_PASSWORD=your_admin_password_here
 SECRET_TOKEN_DEV="my_secret_token"
 SECRET_KEY_BASE_DEV="abcdef0123456789"
 
+SECRET_TOKEN_TEST="my_secret_token"
+SECRET_KEY_BASE_TEST="abcdef0123456789"
+
 SECRET_TOKEN="my_secret_token"
 SECRET_KEY_BASE="abcdef0123456789"
