--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -2,6 +2,10 @@ development:
   secret_token: <%= ENV['SECRET_TOKEN_DEV'] %>
   secret_key_base: <%= ENV['SECRET_KEY_BASE_DEV'] %>
 
+test:
+  secret_token: <%= ENV['SECRET_TOKEN_TEST'] %>
+  secret_key_base: <%= ENV['SECRET_KEY_BASE_TEST'] %>
+
 production:
   secret_token: <%= ENV['SECRET_TOKEN'] %>
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
