--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /tmp
 
 # Ignore carrier wave uploads for development
-/public/uploads/image/*.*
+/public/uploads/product/image/*
 
 # Ignore db creds / settings
 # /config/database.yml
